# diffmind

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.ts  install.sh  jest.config.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/local-cli/: package.json  tsconfig.json
apps/local-cli/src/: formatters.test.ts  formatters.ts  index.ts  indexer.test.ts  indexer.ts  rag-retrieval.test.ts  rag.ts  worker.ts
apps/local-cli/src/engine/: native-health.test.ts  router.test.ts  router.ts
apps/tui-cli/: Cargo.toml
apps/tui-cli/src/: cli.rs  download.rs  git.rs  indexer.rs  main.rs  rag.rs  rules.rs
scripts/: sync-versions.js
