[workspace]
members = ["packages/core-wasm", "packages/core-engine", "packages/core-native"]
resolver = "2"

# Workspace-level dependency versions to keep crates in sync
[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
candle-core = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
tokenizers = { version = "0.21.0", default-features = false, features = ["fancy-regex"] }
rand = "0.9"

# Release profile: Optimize for maximum execution speed.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# "abort" is incompatible with NAPI .node binaries: it disables napi-rs's
# internal catch_unwind, so any panic (including bugs in candle) kills the
# entire Node.js process instead of returning a JavaScript error.
panic = "unwind"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies even in dev builds — critical for candle inference speed during development
[profile.dev.package."*"]
opt-level = 3
