[workspace]
members = [
    "packages/core-engine",
    "apps/tui-cli",
]
resolver = "2"

# Workspace-level dependency versions to keep crates in sync
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle-core = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
tokenizers = { version = "0.21.0", default-features = false, features = ["fancy-regex"] }
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
indicatif = "0.17"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }


# Release profile: Optimize for maximum execution speed.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies even in dev builds — critical for candle inference speed during development
[profile.dev.package."*"]
opt-level = 3
